Added calculator implementation

--- a/basic_draw/draw.html
+++ b/basic_draw/draw.html
@@ -7,15 +7,16 @@
 
 </head>
 <body>
-  
+
   <div>
     <h1  id = "textHere">---</h1>
   </div>
   <video id="video" style="display:none;"></video>
-  
-  <canvas id="canvas2"></canvas><!--      posenet canvas 2     -->
-  <canvas id="canvas1"></canvas><!--     game canvas 1    -->
-   
+
+  <div id="calculator" style="width: 1000px; height: 900px;"></div>
+	<canvas id="canvas2"></canvas><!--      posenet canvas 2     -->
+	<script src="https://www.desmos.com/api/v1.5/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
+
   <!-- alternative load libraries external -->
   <!--
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
@@ -25,6 +26,6 @@
   <script src="tensorflow/tensorflow_posenet.js"></script>
   <script src="js/draw.js"></script>
   <script src="js/posenet.js"></script>
- 
+
 </body>
 </html>
